--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
 		"dev:local": "vite",
 		"dev": "vite --host 0.0.0.0",
 		"build": "tsc -b && vite build",
-		"lint": "eslint .",
 		"preview": "vite preview --host 0.0.0.0",
-		"preview:local": "vite preview"
+		"preview:local": "vite preview",
+		"biome:check": "biome check --write --unsafe ."
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.17",
@@ -25,6 +25,7 @@
 		"vite-plugin-pwa": "^1.2.0"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "^2.3.8",
 		"@eslint/js": "^9.39.1",
 		"@types/node": "^24.10.1",
 		"@types/react": "^19.2.5",
@@ -34,6 +35,7 @@
 		"eslint-plugin-react-hooks": "^7.0.1",
 		"eslint-plugin-react-refresh": "^0.4.24",
 		"globals": "^16.5.0",
+		"lefthook": "^2.0.9",
 		"typescript": "~5.9.3",
 		"typescript-eslint": "^8.46.4",
 		"vite": "^7.2.4"
