--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@tailwindcss/vite": "^4.1.17",
 		"@use-gesture/react": "^10.3.1",
 		"clsx": "^2.1.1",
+		"idb": "^8.0.3",
 		"jotai": "^2.15.2",
 		"lucide-react": "^0.556.0",
 		"react": "^19.2.0",
